# covid19cuba-action

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  action.yml  get.py  main.py  pyproject.toml  requirements.txt  schema.json
.github/workflows/: python.yml
app/: __init__.py  send_message.py  utils.py
app/static/: about_us.py  app_version.py  changelog.py  countries.py  cuba_population.py  downloads.py  faqs.py  moments.py  municipality_codes.py  phases.py  province_codes.py  provinces_population.py  tips.py  zones.py
app/v1/: __init__.py  about_us.py  changelog.py  checker.py  countries.py  download_comments.py  generator.py  generator_acn_news.py  generator_cubadebate_news.py  generator_jt_news.py  generator_municipalities.py  generator_municipality.py  generator_provinces.py  mimificator.py  moments.py  parsers.py  province_codes.py  schema.json  schema.py  schema_deaths.py  utils.py
app/v2/: __init__.py  checker.py  generator.py  generator_acn_news.py  generator_gob_news.py  generator_jt_news.py  generator_municipalities.py  generator_news.py  generator_provinces.py  schema_deaths.py
app/v2/checker/: __init__.py  schema.py  schema_deaths.py
app/v2/extras_generator/: __init__.py  bulletins_generator.py  protocols_generator.py
app/v2/news_generator/: __init__.py  acn_news_generator.py  cd_news_generator.py  generator_cubadebate_news.py  gob_news_generator.py  jt_news_generator.py
app/v2/statistics_generator/: __init__.py  municipalities_generator.py  national_generator.py  provinces_generator.py
data/: covid19-cuba.json
